cabal-version:      2.2
name:               pandabot-discord
version:            0.2.1
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2021 Morrow
maintainer:         example@example.com
author:             Morrow
homepage:           https://github.com/MorrowM/pandabot-discord#readme
bug-reports:        https://github.com/MorrowM/pandabot-discord/issues
description:
  Please see the README on GitHub at <https://github.com/MorrowM/pandabot-discord#readme>

build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

library
  exposed-modules:
    Pandabot
    Pandabot.Bot.Commands
    Pandabot.Bot.Commands.Utils
    Pandabot.Bot.Config
    Pandabot.Bot.Database
    Pandabot.Bot.Handlers
    Pandabot.Bot.Orphans
    Pandabot.Bot.Schema
    Pandabot.Bot.Util
    Pandabot.Buttons
    Pandabot.Help
    Pandabot.Modtools
    Pandabot.PandaRole
    Pandabot.PlayerDB
    Pandabot.PlayerDB.Whitelist
    Pandabot.Points
    Pandabot.RestrictGuilds
    Pandabot.VoiceLog

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wno-name-shadowing -Wno-partial-type-signatures
    -fplugin=Polysemy.Plugin

  build-depends:
    , aeson                 ^>=1.5.6.0
    , aeson-pretty          ^>=0.8.8
    , base                  >=4.7       && <5
    , bytestring            ^>=0.10.12.0
    , calamity              ^>=0.1.30.3
    , calamity-commands     ^>=0.1.3.0
    , conduit               ^>=1.3.4.1
    , containers            ^>=0.6.2.1
    , data-default          ^>=0.7.1.1
    , data-flags            ^>=0.0.3.4
    , df1                   ^>=0.4
    , di                    ^>=1.3
    , di-core               ^>=1.0.4
    , di-polysemy           ^>=0.2.0.0
    , directory             ^>=1.3.6.0
    , esqueleto             ^>=3.5.1.0
    , generic-lens          ^>=2.1.0.0
    , lens                  ^>=5.0.1
    , lens-aeson            ^>=1.1.1
    , megaparsec            ^>=9.0.1
    , monad-logger          ^>=0.3.36
    , optparse-generic      ^>=1.4.4
    , persistent            ^>=2.13.0.1
    , persistent-sqlite     ^>=2.13.0.0
    , polysemy              ^>=1.5.0.0
    , polysemy-plugin       ^>=0.3.0.0
    , polysemy-time         ^>=0.1.2.1
    , req                   ^>=3.9.1
    , text                  ^>=1.2.4.1
    , text-show             ^>=3.9
    , time                  ^>=1.9.3
    , unboxing-vector       ^>=0.2.0.0
    , unordered-containers  ^>=0.2.14.0
    , yaml                  ^>=0.11.5.0

executable pandabot
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base              >=4.7 && <5
    , pandabot-discord

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , aeson             ^>=1.5.6.0
    , base              ^>=4.14.1.0
    , calamity          ^>=0.1.30.2
    , generic-lens      ^>=2.1.0.0
    , hspec             ^>=2.8.2
    , hspec-discover    ^>=2.8.2
    , lens              ^>=5.0.1
    , pandabot-discord
    , polysemy          ^>=1.5.0.0
    , text              ^>=1.2.4.1
    , yaml              ^>=0.11.5.0
