cabal-version:      2.2
name:               pandabot-discord
version:            0.2.1
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2021 Morrow
maintainer:         example@example.com
author:             Morrow
homepage:           https://github.com/MorrowM/pandabot-discord#readme
bug-reports:        https://github.com/MorrowM/pandabot-discord/issues
description:
  Please see the README on GitHub at <https://github.com/MorrowM/pandabot-discord#readme>

build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

library
  exposed-modules:
    Pandabot
    Pandabot.Bot.Commands
    Pandabot.Bot.Commands.Utils
    Pandabot.Bot.Config
    Pandabot.Bot.Database
    Pandabot.Bot.Handlers
    Pandabot.Bot.Orphans
    Pandabot.Bot.Schema
    Pandabot.Bot.Util
    Pandabot.Buttons
    Pandabot.Help
    Pandabot.Modtools
    Pandabot.PandaRole
    Pandabot.PinTool
    Pandabot.PlayerDB
    Pandabot.PlayerDB.Whitelist
    Pandabot.Points
    Pandabot.RestrictGuilds
    Pandabot.VoiceLog

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall -Wno-name-shadowing -Wno-partial-type-signatures
    -fplugin=Polysemy.Plugin

  build-depends:
    , aeson
    , aeson-optics
    , aeson-pretty
    , base                  >=4.7 && <5
    , bytestring
    , calamity              ^>=0.5
    , calamity-commands     ^>=0.4
    , conduit
    , containers
    , data-default
    , data-flags
    , df1
    , di
    , di-core
    , di-polysemy
    , directory
    , esqueleto
    , megaparsec
    , monad-logger
    , optics
    , optparse-generic
    , persistent
    , persistent-sqlite
    , polysemy
    , polysemy-plugin
    , polysemy-time
    , req
    , text
    , text-show
    , time
    , unboxing-vector
    , unordered-containers
    , yaml

executable pandabot
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base              >=4.7 && <5
    , pandabot-discord

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , aeson
    , base
    , calamity
    , generic-lens
    , hspec
    , hspec-discover
    , lens
    , pandabot-discord
    , polysemy
    , text
    , yaml
